--- a/piggybankfrontend/package.json
+++ b/piggybankfrontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-cookie": "^7.1.0",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-image-upload": "^3.0.1",
@@ -20,6 +21,7 @@
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
